--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Other/Themes/Telerik.Windows.Controls.Input.xaml
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/Other/Themes/Telerik.Windows.Controls.Input.xaml
@@ -1582,12 +1582,12 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerik1:RadButton" BasedOn="{StaticResource RadButtonStyle}"/>
+    <!--<Style TargetType="telerik1:RadButton" BasedOn="{StaticResource RadButtonStyle}"/>
     <Style TargetType="telerik1:RadPathButton" BasedOn="{StaticResource RadPathButtonStyle}"/>
     <Style TargetType="telerik1:RadToggleButton" BasedOn="{StaticResource RadToggleButtonStyle}"/>
     <Style TargetType="telerik1:RadRadioButton" BasedOn="{StaticResource RadRadioButtonStyle}"/>
     <Style TargetType="telerik1:RadDropDownButton" BasedOn="{StaticResource RadDropDownButtonStyle}"/>
-    <Style TargetType="telerik1:RadSplitButton" BasedOn="{StaticResource RadSplitButtonStyle}"/>
+    <Style TargetType="telerik1:RadSplitButton" BasedOn="{StaticResource RadSplitButtonStyle}"/>-->
     <Style x:Key="RadWatermarkTextBoxStyle" TargetType="telerik1:RadWatermarkTextBox">
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -1768,7 +1768,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerik1:RadWatermarkTextBox" BasedOn="{StaticResource RadWatermarkTextBoxStyle}"/>
+    <!--<Style TargetType="telerik1:RadWatermarkTextBox" BasedOn="{StaticResource RadWatermarkTextBoxStyle}"/>-->
     <telerik:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverterInstance"/>
     <telerikMaskedInput:HorizontalContentAlignmentToTextAlignmentConverter x:Key="HorizontalContentAlignmentToTextAlignmentConverter"/>
     <sys:Double x:Key="ColorEditor_Label_MinWidth">11</sys:Double>
@@ -2380,8 +2380,8 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerikInput:RadComboBoxItem" BasedOn="{StaticResource RadComboBoxItemStyle}"/>
-    <Style TargetType="telerikInput:RadComboBox" BasedOn="{StaticResource RadComboBoxStyle}"/>
+    <!--<Style TargetType="telerikInput:RadComboBoxItem" BasedOn="{StaticResource RadComboBoxItemStyle}"/>
+    <Style TargetType="telerikInput:RadComboBox" BasedOn="{StaticResource RadComboBoxStyle}"/>-->
     <ControlTemplate x:Key="IncreaseRepeatButtonControlTemplate" TargetType="RepeatButton">
         <Grid>
             <VisualStateManager.VisualStateGroups>
@@ -2718,7 +2718,7 @@
         <Setter Property="MinHeight" Value="0"/>
         <Setter Property="Template" Value="{StaticResource RadNumericUpDownControlTemplate}"/>
     </Style>
-    <Style TargetType="telerikInput:RadNumericUpDown" BasedOn="{StaticResource RadNumericUpDownStyle}"/>
+    <!--<Style TargetType="telerikInput:RadNumericUpDown" BasedOn="{StaticResource RadNumericUpDownStyle}"/>-->
     <localization:CultureToLocalizationStringConverter x:Key="cultureConverter"/>
     <telerik1:LocalizationManager x:Key="localizationManager"/>
     <Style TargetType="telerik1:RadButton" x:Key="RadColorPicker_HeaderButtonStyle">
@@ -3165,10 +3165,10 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerikInput:RadColorPaletteViewItem" BasedOn="{StaticResource RadColorPaletteViewItemStyle}"/>
+    <!--<Style TargetType="telerikInput:RadColorPaletteViewItem" BasedOn="{StaticResource RadColorPaletteViewItemStyle}"/>
     <Style TargetType="telerikInput:RadColorPaletteView" BasedOn="{StaticResource RadColorPaletteViewStyle}"/>
     <Style TargetType="telerikInput:RadColorSelector" BasedOn="{StaticResource RadColorSelectorStyle}"/>
-    <Style TargetType="telerikInput:RadColorPicker" BasedOn="{StaticResource RadColorPickerStyle}"/>
+    <Style TargetType="telerikInput:RadColorPicker" BasedOn="{StaticResource RadColorPickerStyle}"/>-->
     <colorPickerConverters:HueConverter x:Key="HueConverter"/>
     <colorPickerConverters:EnumConverter x:Key="EnumConverter"/>
     <colorPickerConverters:ColorToHSColorBrushConverter x:Key="ColorToHSColorBrushConverter"/>
@@ -3947,8 +3947,8 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style BasedOn="{StaticResource PadStyle}" TargetType="pad:Pad"/>
-    <Style TargetType="telerikInput:RadColorEditor" BasedOn="{StaticResource RadColorEditorStyle}"/>
+    <!--<Style BasedOn="{StaticResource PadStyle}" TargetType="pad:Pad"/>-->
+    <!--<Style TargetType="telerikInput:RadColorEditor" BasedOn="{StaticResource RadColorEditorStyle}"/>-->
     <Style x:Key="CalendarButtonStyle" TargetType="calendar:CalendarButton">
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -4103,7 +4103,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="calendar:CalendarButton" BasedOn="{StaticResource CalendarButtonStyle}"/>
+    <!--<Style TargetType="calendar:CalendarButton" BasedOn="{StaticResource CalendarButtonStyle}"/>-->
     <Style TargetType="calendar:CalendarView" x:Key="CalendarViewStyle">
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -4217,7 +4217,7 @@
         </Setter>
         <Setter Property="Margin" Value="0"/>
     </Style>
-    <Style TargetType="calendar:CalendarView" BasedOn="{StaticResource MonthViewStyle}"/>
+    <!--<Style TargetType="calendar:CalendarView" BasedOn="{StaticResource MonthViewStyle}"/>-->
     <Style x:Key="MoveLeftButtonStyle" TargetType="RepeatButton">
         <Setter Property="MinWidth" Value="22"/>
         <Setter Property="MinHeight" Value="22"/>
@@ -4443,7 +4443,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerikInput:RadCalendar" BasedOn="{StaticResource RadCalendarStyle}"/>
+    <!--<Style TargetType="telerikInput:RadCalendar" BasedOn="{StaticResource RadCalendarStyle}"/>-->
     <Style x:Key="RadClockItemStyle" TargetType="telerikInput:RadClockItem">
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -4515,7 +4515,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerikInput:RadClockItem" BasedOn="{StaticResource RadClockItemStyle}"/>
+    <!--<Style TargetType="telerikInput:RadClockItem" BasedOn="{StaticResource RadClockItemStyle}"/>-->
     <Style TargetType="telerikInput:RadClock" x:Key="RadClockStyle">
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -4575,7 +4575,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerikInput:RadClock" BasedOn="{StaticResource RadClockStyle}"/>
+    <!--<Style TargetType="telerikInput:RadClock" BasedOn="{StaticResource RadClockStyle}"/>-->
     <DataTemplate x:Key="WatermarkTemplate">
         <TextBlock Opacity="1" Text="{Binding}"/>
     </DataTemplate>
@@ -4964,13 +4964,13 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerikInput:RadDateTimePicker" BasedOn="{StaticResource RadDateTimePickerStyle}"/>
-    <Style TargetType="telerikInput:RadDatePicker" BasedOn="{StaticResource RadDateTimePickerStyle}">
+    <!--<Style TargetType="telerikInput:RadDateTimePicker" BasedOn="{StaticResource RadDateTimePickerStyle}"/>-->
+    <!--<Style TargetType="telerikInput:RadDatePicker" BasedOn="{StaticResource RadDateTimePickerStyle}">
         <Setter Property="InputMode" Value="DatePicker"/>
     </Style>
     <Style TargetType="telerikInput:RadTimePicker" BasedOn="{StaticResource RadDateTimePickerStyle}">
         <Setter Property="InputMode" Value="TimePicker"/>
-    </Style>
+    </Style>-->
     <Style x:Key="RadRatingStyle" TargetType="telerikInput:RadRating">
         <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontSize" Value="12"/>
@@ -5156,8 +5156,8 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerikInput:RadRating" BasedOn="{StaticResource RadRatingStyle}"/>
-    <Style TargetType="telerikInput:RadRatingItem" BasedOn="{StaticResource RadRatingItemStyle}"/>
+    <!--<Style TargetType="telerikInput:RadRating" BasedOn="{StaticResource RadRatingStyle}"/>
+    <Style TargetType="telerikInput:RadRatingItem" BasedOn="{StaticResource RadRatingItemStyle}"/>-->
     <Style x:Key="CalculatorHistoryDisplay_Style" TargetType="TextBox">
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="VerticalContentAlignment" Value="Stretch"/>
@@ -5291,7 +5291,7 @@
                             Margin="4 5 5 0"/>
                 </Grid>
                 <Grid Grid.Row="1" Background="Transparent" Margin="0 5 -3 0">
-                    <Grid.Resources>
+                    <!--<Grid.Resources>
                         <Style TargetType="telerik:RadButton" BasedOn="{StaticResource RadButtonStyle}">
                             <Setter Property="IsTabStop" Value="False"/>
                             <Setter Property="Padding" Value="8 5 8 4"/>
@@ -5299,7 +5299,7 @@
                             <Setter Property="CornerRadius" Value="0"/>
                             <Setter Property="Margin" Value="0 6 4 0"/>
                         </Style>
-                    </Grid.Resources>
+                    </Grid.Resources>-->
                     <Grid.RowDefinitions>
                         <RowDefinition x:Name="row"/>
                         <RowDefinition/>
@@ -5512,7 +5512,7 @@
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
-    <Style TargetType="telerikInput:RadCalculator" BasedOn="{StaticResource RadCalculatorStyle}"/>
+    <!--<Style TargetType="telerikInput:RadCalculator" BasedOn="{StaticResource RadCalculatorStyle}"/>-->
     <Style x:Key="CalculatorPickerDisplayValue_Style" TargetType="TextBox">
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -5658,7 +5658,7 @@
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="BorderThickness" Value="1"/>
     </Style>
-    <Style TargetType="telerikInput:RadCalculatorPicker" BasedOn="{StaticResource RadCalculatorPickerStyle}"/>
+    <!--<Style TargetType="telerikInput:RadCalculatorPicker" BasedOn="{StaticResource RadCalculatorPickerStyle}"/>-->
     <Style TargetType="telerikInput:RadUpload" x:Key="RadUploadStyle">
         <Setter Property="MinHeight" Value="175"/>
         <Setter Property="MinWidth" Value="350"/>
@@ -6055,9 +6055,9 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="telerikInput:RadUpload" BasedOn="{StaticResource RadUploadStyle}"/>
+    <!--<Style TargetType="telerikInput:RadUpload" BasedOn="{StaticResource RadUploadStyle}"/>
     <Style TargetType="telerikInput:RadUploadItem" BasedOn="{StaticResource RadUploadItemStyle}"/>
-    <Style TargetType="telerikInput:RadUploadDropPanel" BasedOn="{StaticResource RadUploadDropPanelStyle}"/>
+    <Style TargetType="telerikInput:RadUploadDropPanel" BasedOn="{StaticResource RadUploadDropPanelStyle}"/>-->
     <telerikMaskedInput:HorizontalContentAlignmentToTextAlignmentConverter x:Key="conv"/>
     <telerik1:BooleanToVisibilityConverter x:Key="boolToVisConverter"/>
     <Style x:Key="MaskedInputTextBoxStyle" TargetType="telerikMaskedInput:PreviewInputTextBox">
@@ -6393,10 +6393,10 @@
         <Setter Property="SpinMode" Value="Position"/>
         <Setter Property="SectionsNavigationMode" Value="Once"/>
     </Style>
-    <Style TargetType="telerikInput:RadMaskedNumericInput" BasedOn="{StaticResource RadMaskedNumericInputStyle}"/>
+    <!--<Style TargetType="telerikInput:RadMaskedNumericInput" BasedOn="{StaticResource RadMaskedNumericInputStyle}"/>
     <Style TargetType="telerikInput:RadMaskedCurrencyInput" BasedOn="{StaticResource RadMaskedCurrencyInputStyle}"/>
     <Style TargetType="telerikInput:RadMaskedDateTimeInput" BasedOn="{StaticResource RadMaskedDateTimeInputStyle}"/>
-    <Style TargetType="telerikInput:RadMaskedTextInput" BasedOn="{StaticResource RadMaskedTextInputStyle}"/>
+    <Style TargetType="telerikInput:RadMaskedTextInput" BasedOn="{StaticResource RadMaskedTextInputStyle}"/>-->
     <Style x:Key="RadAutoCompleteBoxItemStyle" TargetType="telerikInput:RadAutoCompleteBoxItem">
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -6616,6 +6616,6 @@
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Disabled"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
     </Style>
-    <Style TargetType="telerikInput:RadAutoCompleteBoxItem" BasedOn="{StaticResource RadAutoCompleteBoxItemStyle}"/>
-    <Style TargetType="telerikInput:RadAutoCompleteBox" BasedOn="{StaticResource RadAutoCompleteBoxStyle}"/>
+    <!--<Style TargetType="telerikInput:RadAutoCompleteBoxItem" BasedOn="{StaticResource RadAutoCompleteBoxItemStyle}"/>
+    <Style TargetType="telerikInput:RadAutoCompleteBox" BasedOn="{StaticResource RadAutoCompleteBoxStyle}"/>-->
 </ResourceDictionary>
